@@ -3736,8 +3736,8 @@
             "img": "geany",
             "main-package": "geany",
             "launch-command": "geany",
-            "install-packages": "geany,geany-plugins,geany-plugin-commander,geany-plugin-markdown,geany-plugin-miniscript,geany-plugin-scope,geany-plugin-vc",
-            "remove-packages": "geany,geany-plugins,geany-plugin-commander,geany-plugin-markdown,geany-plugin-miniscript,geany-plugin-scope,geany-plugin-vc",
+            "install-packages": "geany,geany-plugins",
+            "remove-packages": "geany,geany-plugins",
             "description": [
                 "Small and lightweight integrated",
                 "development environment. It was developed to provide a small",
