@@ -1,7 +1,8 @@
 {
     "17.10.14": {
         "fix": {
-            "openrazer": "new-source"
+            "openrazer": "new-source",
+            "geany": "general"
         }
     },
     "17.10.13": {
