@@ -2,6 +2,7 @@ ubuntu-mate-welcome (17.10.14) UNRELEASED; urgency=medium
 
   * Update OpenRazer for Artful.
   * Update Déjà Dup launch command for Artful.
+  * Fix Geany plugins install.
 
  -- Martin Wimpress <martin@ubuntu-mate.org>  Mon, 04 Sep 2017 22:32:03 +0100
 
